--- a/app-admin.yml
+++ b/app-admin.yml
@@ -84,5 +84,5 @@ services:
       - net
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock"
-    labels:
+#    labels:
 #      - "org.label-schema.group=app-admin"
