--- a/app-vps.yml
+++ b/app-vps.yml
@@ -3,6 +3,8 @@ version: "3.8"
 networks:
   net:
     driver: bridge
+
+services:
     
   nginx-proxy-manager:
     image: jc21/nginx-proxy-manager:latest
