--- a/app-vps.yml
+++ b/app-vps.yml
@@ -67,3 +67,23 @@ services:
       - "/var/run/docker.sock:/var/run/docker.sock"
     labels:
       - "org.label-schema.group=app-vps"
+      
+  node-exporter:
+    image: prom/node-exporter:latest
+    container_name: node-exporter-vps
+    volumes:
+      - /proc:/host/proc:ro
+      - /sys:/host/sys:ro
+      - /:/rootfs:ro
+    command:
+      - '--path.procfs=/host/proc'
+      - '--path.rootfs=/rootfs'
+      - '--path.sysfs=/host/sys'
+      - '--collector.filesystem.mount-points-exclude=^/(sys|proc|dev|host|etc)($$|/)'
+    restart: unless-stopped
+    ports:
+      - 9100:9100
+    networks:
+      - net
+    labels:
+      - "org.label-schema.group=app-vps"
