--- a/app-vps.yml
+++ b/app-vps.yml
@@ -86,4 +86,5 @@ services:
     networks:
       - net
     labels:
+      - "com.centurylinklabs.watchtower.enable=true"
       - "org.label-schema.group=app-vps"
