--- a/app-admin.yml
+++ b/app-admin.yml
@@ -80,6 +80,9 @@ services:
       - WATCHTOWER_NOTIFICATION_EMAIL_SERVER_USER=${emaillogin}
       - WATCHTOWER_NOTIFICATION_EMAIL_SERVER_PASSWORD=${apppassword}
       - WATCHTOWER_NOTIFICATION_EMAIL_DELAY=2
+      - WATCHTOWER_NOTIFICATION_SLACK_HOOK_URL="https://app.slack.com/client/T06R75XLQLS/C06R0GQNRHC"
+      - WATCHTOWER_NOTIFICATION_SLACK_IDENTIFIER=Watchtower-NAS
+      - WATCHTOWER_NOTIFICATION_SLACK_CHANNEL=#supervision
     networks:
       - net
     volumes:
