--- a/app-admin.yml
+++ b/app-admin.yml
@@ -73,16 +73,16 @@ services:
 #      - WATCHTOWER_NOTIFICATION_GOTIFY_TOKEN=${token}
 #      - WATCHTOWER_NOTIFICATION_GOTIFY_URL=${url}
       - WATCHTOWER_NOTIFICATIONS=email
-      - WATCHTOWER_NOTIFICATION_EMAIL_FROM=${emailurlfrom}
-      - WATCHTOWER_NOTIFICATION_EMAIL_TO=${emailurlto}
-      - WATCHTOWER_NOTIFICATION_EMAIL_SERVER=${smtpserver}
-      - WATCHTOWER_NOTIFICATION_EMAIL_SERVER_PORT=${emailport}
-      - WATCHTOWER_NOTIFICATION_EMAIL_SERVER_USER=${emaillogin}
-      - WATCHTOWER_NOTIFICATION_EMAIL_SERVER_PASSWORD=${apppassword}
+      - WATCHTOWER_NOTIFICATION_EMAIL_FROM=${EMAILURLFROM}
+      - WATCHTOWER_NOTIFICATION_EMAIL_TO=${EMAILURLTO}
+      - WATCHTOWER_NOTIFICATION_EMAIL_SERVER=${SMTPSERVER}
+      - WATCHTOWER_NOTIFICATION_EMAIL_SERVER_PORT=${EMAILPORT}
+      - WATCHTOWER_NOTIFICATION_EMAIL_SERVER_USER=${EMAILOGIN}
+      - WATCHTOWER_NOTIFICATION_EMAIL_SERVER_PASSWORD=${APPPASSWORD}
       - WATCHTOWER_NOTIFICATION_EMAIL_DELAY=2
-      - WATCHTOWER_NOTIFICATION_SLACK_HOOK_URL="https://app.slack.com/client/T06R75XLQLS/C06R0GQNRHC"
-      - WATCHTOWER_NOTIFICATION_SLACK_IDENTIFIER=Watchtower-NAS
-      - WATCHTOWER_NOTIFICATION_SLACK_CHANNEL=#supervision
+      - WATCHTOWER_NOTIFICATION_SLACK_HOOK_URL=${URL_SLACK}
+      - WATCHTOWER_NOTIFICATION_SLACK_IDENTIFIER=${SLACK_IDENTIFIER}
+      - WATCHTOWER_NOTIFICATION_SLACK_CHANNEL=${SLACK_CHANNEL]
     networks:
       - net
     volumes:
