--- a/app-admin.yml
+++ b/app-admin.yml
@@ -82,7 +82,7 @@ services:
       - WATCHTOWER_NOTIFICATION_EMAIL_DELAY=2
       - WATCHTOWER_NOTIFICATION_SLACK_HOOK_URL=${URL_SLACK}
       - WATCHTOWER_NOTIFICATION_SLACK_IDENTIFIER=${SLACK_IDENTIFIER}
-      - WATCHTOWER_NOTIFICATION_SLACK_CHANNEL=${SLACK_CHANNEL]
+      - WATCHTOWER_NOTIFICATION_SLACK_CHANNEL=${SLACK_CHANNEL}
     networks:
       - net
     volumes:
