--- a/app-admin.yml
+++ b/app-admin.yml
@@ -74,14 +74,14 @@ services:
 #      - WATCHTOWER_NOTIFICATION_GOTIFY_TOKEN=${token}
 #      - WATCHTOWER_NOTIFICATION_GOTIFY_URL=${url}
 
-      - WATCHTOWER_NOTIFICATIONS=email
-      - WATCHTOWER_NOTIFICATION_EMAIL_FROM=${EMAILURLFROM}
-      - WATCHTOWER_NOTIFICATION_EMAIL_TO=${EMAILURLTO}
-      - WATCHTOWER_NOTIFICATION_EMAIL_SERVER=${SMTPSERVER}
-      - WATCHTOWER_NOTIFICATION_EMAIL_SERVER_PORT=${EMAILPORT}
-      - WATCHTOWER_NOTIFICATION_EMAIL_SERVER_USER=${EMAILOGIN}
-      - WATCHTOWER_NOTIFICATION_EMAIL_SERVER_PASSWORD=${APPPASSWORD}
-      - WATCHTOWER_NOTIFICATION_EMAIL_DELAY=2
+#      - WATCHTOWER_NOTIFICATIONS=email
+#      - WATCHTOWER_NOTIFICATION_EMAIL_FROM=${EMAILURLFROM}
+#      - WATCHTOWER_NOTIFICATION_EMAIL_TO=${EMAILURLTO}
+#      - WATCHTOWER_NOTIFICATION_EMAIL_SERVER=${SMTPSERVER}
+#      - WATCHTOWER_NOTIFICATION_EMAIL_SERVER_PORT=${EMAILPORT}
+#      - WATCHTOWER_NOTIFICATION_EMAIL_SERVER_USER=${EMAILOGIN}
+#      - WATCHTOWER_NOTIFICATION_EMAIL_SERVER_PASSWORD=${APPPASSWORD}
+#      - WATCHTOWER_NOTIFICATION_EMAIL_DELAY=2
 
       - WATCHTOWER_NOTIFICATIONS=slack
       - WATCHTOWER_NOTIFICATION_SLACK_HOOK_URL=${URL_SLACK}
