--- a/app-admin.env
+++ b/app-admin.env
@@ -4,3 +4,6 @@ SMTPSERVER=smtp.gmail.com
 EMAILPORT=587
 EMAILOGIN=naspariteau@gmail.com
 APPPASSWORD=musfgqatifhmhbuz
+URL_SLACK="https://app.slack.com/client/T06R75XLQLS/C06R0GQNRHC"
+SLACK_IDENTIFIER=Watchtower-NAS
+SLACK_CHANNEL=#supervision
