--- a/app-admin.yml
+++ b/app-admin.yml
@@ -12,6 +12,8 @@ services:
     container_name: filebrowser
     ports:
       - 1000:8080
+    expose:
+      - 1000
     networks:
       - net
     volumes:
