--- a/app-admin.yml
+++ b/app-admin.yml
@@ -3,6 +3,8 @@ version: "3.8"
 networks:
   net:
     driver: bridge
+  monitoring_net:
+    external: true
 
 services:
 
@@ -15,7 +17,7 @@ services:
     expose:
       - 1000
     networks:
-      - net
+      - monitoring_net
     volumes:
       - "/srv/dev-disk-by-uuid-4eabc91d-46b4-4d1d-9b18-5c13f7f80153/:/data"
       - "/srv/dev-disk-by-uuid-4eabc91d-46b4-4d1d-9b18-5c13f7f80153/docker/filebrowser/config/:/config"
