--- a/app-admin.env
+++ b/app-admin.env
@@ -4,6 +4,8 @@ SMTPSERVER=smtp.gmail.com
 EMAILPORT=587
 EMAILOGIN=naspariteau@gmail.com
 APPPASSWORD=musfgqatifhmhbuz
-URL_SLACK="https://app.slack.com/client/T06R75XLQLS/C06R0GQNRHC"
+URL_SLACK_MAJ_CONTAINERS=https://app.slack.com/client/T06R75XLQLS/C06R0GQNRHC
+URL_SLACK_SUP=https://app.slack.com/client/T06R75XLQLS/C06RB2LNTAN
 SLACK_IDENTIFIER=Watchtower-NAS
-SLACK_CHANNEL=#supervision
+SLACK_CHANNEL_MAJ_CONTAINERS=#maj-containers
+SLACK_CHANNEL_SUP=#supervision
