--- a/app-admin.yml
+++ b/app-admin.yml
@@ -84,9 +84,9 @@ services:
 #      - WATCHTOWER_NOTIFICATION_EMAIL_DELAY=2
 
       - WATCHTOWER_NOTIFICATIONS=slack
-      - WATCHTOWER_NOTIFICATION_SLACK_HOOK_URL=${URL_SLACK_MAJ_CONTAINERS}
+      - WATCHTOWER_NOTIFICATION_SLACK_HOOK_URL=${URL_SLACK}
       - WATCHTOWER_NOTIFICATION_SLACK_IDENTIFIER=${SLACK_MAJ_CONTAINERS_IDENTIFIER}
-      - WATCHTOWER_NOTIFICATION_SLACK_CHANNEL=${SLACK_CHANNEL_MAJ_CONTAINERS}
+#      - WATCHTOWER_NOTIFICATION_SLACK_CHANNEL=${SLACK_CHANNEL_MAJ_CONTAINERS}
     networks:
       - net
     volumes:
