--- a/monitoring.yml
+++ b/monitoring.yml
@@ -128,7 +128,7 @@ services:
       - 9093:9093
       - 9091:9091
     volumes:
-      - ./caddy:/etc/caddy
+      - /docker/monitoring/caddy:/etc/caddy
     environment:
       - ADMIN_USER=${ADMIN_USER:-admin}
       - ADMIN_PASSWORD=${ADMIN_PASSWORD:-admin}
