--- a/monitoring.yml
+++ b/monitoring.yml
@@ -19,13 +19,13 @@ services:
  #     - prometheus_data:/prometheus
        - /docker/monitoring/prometheus:/etc/prometheus
        - /docker/monitoring/prometheus:/prometheus
-    command:
-      - "--config.file=/etc/prometheus/prometheus.yml"
-      - "--storage.tsdb.path=/prometheus"
-      - "--web.console.libraries=/etc/prometheus/console_libraries"
-      - "--web.console.templates=/etc/prometheus/consoles"
-      - "--storage.tsdb.retention.time=200h"
-      - "--web.enable-lifecycle"
+#    command:
+#      - "--config.file=/etc/prometheus/prometheus.yml"
+#      - "--storage.tsdb.path=/prometheus"
+#      - "--web.console.libraries=/etc/prometheus/console_libraries"
+#      - "--web.console.templates=/etc/prometheus/consoles"
+#      - "--storage.tsdb.retention.time=200h"
+#      - "--web.enable-lifecycle"
     restart: unless-stopped
     expose:
       - 9090
@@ -42,9 +42,9 @@ services:
 #      - alertmanager_data:/alertmanager
       - /docker/monitoring/alertmanager:/etc/alertmanager
       - /docker/monitoring/alertmanager:/alertmanager
-    command:
-      - "--config.file=/etc/alertmanager/config.yml"
-      - "--storage.path=/alertmanager"
+#    command:
+#      - "--config.file=/etc/alertmanager/config.yml"
+#      - "--storage.path=/alertmanager"
     restart: unless-stopped
     expose:
       - 9093
