--- a/monitoring.yml
+++ b/monitoring.yml
@@ -4,10 +4,10 @@ networks:
   net:
     driver: bridge
 
-#volumes:
-#    prometheus_data: {}
-#    grafana_data: {}
-#    alertmanager_data: {}
+volumes:
+    prometheus_data: {}
+    grafana_data: {}
+    alertmanager_data: {}
 
 services:
 
@@ -15,17 +15,17 @@ services:
     image: prom/prometheus:latest
     container_name: prometheus
     volumes:
- #     - ./prometheus:/etc/prometheus
- #     - prometheus_data:/prometheus
-       - /docker/monitoring/prometheus:/etc/prometheus
-       - /docker/monitoring/prometheus:/prometheus
-#    command:
-#      - "--config.file=/etc/prometheus/prometheus.yml"
-#      - "--storage.tsdb.path=/prometheus"
-#      - "--web.console.libraries=/etc/prometheus/console_libraries"
-#      - "--web.console.templates=/etc/prometheus/consoles"
-#      - "--storage.tsdb.retention.time=200h"
-#      - "--web.enable-lifecycle"
+      - ./prometheus:/etc/prometheus
+      - prometheus_data:/prometheus
+#       - /docker/monitoring/prometheus:/etc/prometheus
+#       - /docker/monitoring/prometheus:/prometheus
+    command:
+      - "--config.file=/etc/prometheus/prometheus.yml"
+      - "--storage.tsdb.path=/prometheus"
+      - "--web.console.libraries=/etc/prometheus/console_libraries"
+      - "--web.console.templates=/etc/prometheus/consoles"
+      - "--storage.tsdb.retention.time=200h"
+      - "--web.enable-lifecycle"
     restart: unless-stopped
     expose:
       - 9090
@@ -38,13 +38,13 @@ services:
     image: prom/alertmanager:latest
     container_name: alertmanager
     volumes:
-#      - ./alertmanager:/etc/alertmanager
-#      - alertmanager_data:/alertmanager
-      - /docker/monitoring/alertmanager:/etc/alertmanager
-      - /docker/monitoring/alertmanager:/alertmanager
-#    command:
-#      - "--config.file=/etc/alertmanager/config.yml"
-#      - "--storage.path=/alertmanager"
+      - ./alertmanager:/etc/alertmanager
+      - alertmanager_data:/alertmanager
+#      - /docker/monitoring/alertmanager:/etc/alertmanager
+#      - /docker/monitoring/alertmanager:/alertmanager
+    command:
+      - "--config.file=/etc/alertmanager/config.yml"
+      - "--storage.path=/alertmanager"
     restart: unless-stopped
     expose:
       - 9093
@@ -96,12 +96,12 @@ services:
     image: grafana/grafana:latest
     container_name: grafana
     volumes:
-#      - grafana_data:/var/lib/grafana
-#      - ./grafana/provisioning/dashboards:/etc/grafana/provisioning/dashboards
-#      - ./grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
-      - /docker/monitoring/grafana/provisioning/dashboards:/etc/grafana/provisioning/dashboards
-      - /docker/monitoring/grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
-      - /docker/monitoring/alertmanager:/alertmanager
+      - grafana_data:/var/lib/grafana
+      - ./grafana/provisioning/dashboards:/etc/grafana/provisioning/dashboards
+      - ./grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
+#      - /docker/monitoring/grafana/provisioning/dashboards:/etc/grafana/provisioning/dashboards
+#      - /docker/monitoring/grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
+#      - /docker/monitoring/alertmanager:/alertmanager
     restart: unless-stopped
     expose:
       - 3000
