--- a/supervision.yml
+++ b/supervision.yml
@@ -7,6 +7,7 @@ networks:
 volumes:
   prometheus-data: {}
   grafana-data: {}
+  alertmanager-data: {}
 
 services:
 
@@ -15,8 +16,8 @@ services:
     container_name: prometheus
     volumes:
       - prometheus-data:/prometheus
-      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
-      - ./alertmanager/alert.rules/alerts.rules.yml:/alertmanager/alert.rules/alerts.rules.yml
+      - /docker/supervision/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+      - /docker/supervision/alertmanager/alert.rules/alerts.rules.yml:/alertmanager/alert.rules/alerts.rules.yml
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
       - '--storage.tsdb.path=/prometheus'
@@ -26,15 +27,16 @@ services:
     networks:
       - net
     labels:
-      - "org.label-schema.group=monitoring"
+      - "org.label-schema.group=supervision"
       - "com.centurylinklabs.watchtower.enable=true"
 
   alertmanager:
     image: prom/alertmanager:latest
     container_name: alertmanager
     volumes:
-      - ./alertmanager/alertmanager.yml:/etc/alertmanager/alertmanager.yml
-      - ./alertmanager/templates/default.tmpl:/etc/alertmanager/templates/default.tmpl
+      - alertmanager-data:/alertmanager
+      - /docker/supervision/alertmanager/alertmanager.yml:/etc/alertmanager/alertmanager.yml
+      - /docker/supervision/alertmanager/templates/default.tmpl:/etc/alertmanager/templates/default.tmpl
     command:
       - '--config.file=/etc/alertmanager/alertmanager.yml'
     expose:
@@ -42,7 +44,7 @@ services:
     networks:
       - net
     labels:
-      - "org.label-schema.group=monitoring"
+      - "org.label-schema.group=supervision"
       - "com.centurylinklabs.watchtower.enable=true"
 
   grafana:
@@ -50,44 +52,42 @@ services:
     container_name: grafana
     environment:
       - GF_PATHS_CONFIG=/etc/grafana/grafana.ini
-    depends_on:
-      - prometheus
     volumes:
       - grafana-data:/var/lib/grafana
-      - ./grafana/datasource.yml:/etc/grafana/provisioning/datasources/datasource.yml
-      - ./grafana/dashboards.yml:/etc/grafana/provisioning/dashboards/dashboards.yml
-      - ./grafana/grafana.ini:/etc/grafana/grafana.ini
-      - ./grafana/dashboards:/var/lib/grafana/dashboards
-    expose:
-      - 3000
+      - /docker/supervision/grafana/datasource.yml:/etc/grafana/provisioning/datasources/datasource.yml
+      - /docker/supervision/grafana/dashboards.yml:/etc/grafana/provisioning/dashboards/dashboards.yml
+      - /docker/supervision/grafana/grafana.ini:/etc/grafana/grafana.ini
+      - /docker/supervision/grafana/dashboards:/var/lib/grafana/dashboards
+    ports:
+      - 3000:3000
     networks:
       - net
     labels:
-      - "org.label-schema.group=monitoring"
+      - "org.label-schema.group=supervision"
       - "com.centurylinklabs.watchtower.enable=true"
 
   blackbox:
     image: prom/blackbox-exporter:latest
-    container_name: blackbox_exporter
+    container_name: blackbox
     volumes:
     - ./blackbox:/config
     expose:
-      - 3030
+      - 9115
     networks:
       - net
     labels:
-      - "org.label-schema.group=monitoring"
+      - "org.label-schema.group=supervision"
       - "com.centurylinklabs.watchtower.enable=true"
 
-  node_exporter:
+  node-exporter:
     image: prom/node-exporter:latest
-    container_name: node_exporter
+    container_name: node-exporter
     expose:
       - 9100
     networks:
       - net
     labels:
-      - "org.label-schema.group=monitoring"
+      - "org.label-schema.group=supervision"
       - "com.centurylinklabs.watchtower.enable=true"
 
   cadvisor:
@@ -107,7 +107,7 @@ services:
     networks:
       - net
     labels:
-      - "org.label-schema.group=monitoring"
+      - "org.label-schema.group=supervision"
       - "com.centurylinklabs.watchtower.enable=true"
 
   pushgateway:
@@ -119,28 +119,28 @@ services:
     networks:
       - net
     labels:
-      - "org.label-schema.group=monitoring"
+      - "org.label-schema.group=supervision"
       - "com.centurylinklabs.watchtower.enable=true"
 
   caddy:
     image: caddy:latest
     container_name: caddy
     ports:
-      - 3000:3000
+
       - 8080:8080
       - 9090:9090
       - 9093:9093
       - 9091:9091
-      - 3030:3030
+      - 9115:9115
     volumes:
-      - ./caddy:/etc/caddy
-#    environment:
-#      - ADMIN_USER=${ADMIN_USER:-admin}
-#      - ADMIN_PASSWORD=${ADMIN_PASSWORD:-admin}
-#      - ADMIN_PASSWORD_HASH=${ADMIN_PASSWORD_HASH:-$2a$14$1l.IozJx7xQRVmlkEQ32OeEEfP5mRxTpbDTCTcXRqn19gXD8YK1pO}
+      - /docker/supervision/caddy:/etc/caddy
+    environment:
+      - ADMIN_USER=${ADMIN_USER:-admin}
+      - ADMIN_PASSWORD=${ADMIN_PASSWORD:-admin}
+      - ADMIN_PASSWORD_HASH=${ADMIN_PASSWORD_HASH:-$2a$14$1l.IozJx7xQRVmlkEQ32OeEEfP5mRxTpbDTCTcXRqn19gXD8YK1pO}
     restart: unless-stopped
     networks:
       - net
     labels:
-      - "org.label-schema.group=monitoring"
+      - "org.label-schema.group=supervision"
       - "com.centurylinklabs.watchtower.enable=true"
