--- a/supervision.yml
+++ b/supervision.yml
@@ -14,6 +14,7 @@ services:
   prometheus:
     image: prom/prometheus:latest
     container_name: prometheus
+    restart: unless-stopped
     volumes:
       - prometheus-data:/prometheus
       - /docker/supervision/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
@@ -33,6 +34,7 @@ services:
   alertmanager:
     image: prom/alertmanager:latest
     container_name: alertmanager
+    restart: unless-stopped
     volumes:
       - alertmanager-data:/alertmanager
       - /docker/supervision/alertmanager/alertmanager.yml:/etc/alertmanager/alertmanager.yml
@@ -52,6 +54,7 @@ services:
     container_name: grafana
     environment:
       - GF_PATHS_CONFIG=/etc/grafana/grafana.ini
+    restart: unless-stopped
     volumes:
       - grafana-data:/var/lib/grafana
       - /docker/supervision/grafana/datasource.yml:/etc/grafana/provisioning/datasources/datasource.yml
@@ -69,6 +72,7 @@ services:
   blackbox:
     image: prom/blackbox-exporter:latest
     container_name: blackbox
+    restart: unless-stopped
     volumes:
     - ./blackbox:/config
     expose:
@@ -82,6 +86,7 @@ services:
   node-exporter:
     image: prom/node-exporter:latest
     container_name: node-exporter
+    restart: unless-stopped
     expose:
       - 9100
     networks:
@@ -94,6 +99,7 @@ services:
     image: gcr.io/cadvisor/cadvisor:latest
     container_name: cadvisor
     privileged: true
+    restart: unless-stopped
     devices:
       - /dev/kmsg:/dev/kmsg
     volumes:
@@ -126,7 +132,6 @@ services:
     image: caddy:latest
     container_name: caddy
     ports:
-
       - 8080:8080
       - 9090:9090
       - 9093:9093
