--- a/supervision.yml
+++ b/supervision.yml
@@ -21,11 +21,11 @@ services:
       - /docker/supervision/alertmanager/alert.rules/alerts.rules.yml:/alertmanager/alert.rules/alerts.rules.yml
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
-      - '--storage.tsdb.path=/prometheus'
-#      - '--storage.tsdb.retention.time=365d'
+#      - '--storage.tsdb.path=/prometheus'
       - '--web.console.libraries=/etc/prometheus/console_libraries'
       - '--web.console.templates=/etc/prometheus/consoles'
-      - '--storage.tsdb.retention.time=200h'
+      - '--storage.tsdb.retention.time=240h'
+      - '--storage.tsdb.retention.size=5GB'
       - '--web.enable-lifecycle'
     expose:
       - 9090
