--- a/app-vps.yml
+++ b/app-vps.yml
@@ -46,21 +46,29 @@ services:
       - TZ=Europe/Paris
       - WATCHTOWER_SCHEDULE= 0 0 3 * * *
       - WATCHTOWER_CLEANUP=true
+#      - WATCHTOWER_REMOVE_VOLUMES=true
       - WATCHTOWER_LOG_LEVEL=info
       - WATCHTOWER_LABEL_ENABLE=true
       - WATCHTOWER_MONITOR_ONLY=true
       - WATCHTOWER_NO_PULL=true
+      
 #      - WATCHTOWER_NOTIFICATIONS=gotify
-#      - WATCHTOWER_NOTIFICATION_GOTIFY_TOKEN=${TOKEN_GOTIFY}
-#      - WATCHTOWER_NOTIFICATION_GOTIFY_URL=${URL_GOTIFY}
-      - WATCHTOWER_NOTIFICATIONS=email
-      - WATCHTOWER_NOTIFICATION_EMAIL_FROM=${EMAILURLFROM}
-      - WATCHTOWER_NOTIFICATION_EMAIL_TO=${EMAILURLTO}
-      - WATCHTOWER_NOTIFICATION_EMAIL_SERVER=${SMTPSERVER}
-      - WATCHTOWER_NOTIFICATION_EMAIL_SERVER_PORT=${EMAILPORT}
-      - WATCHTOWER_NOTIFICATION_EMAIL_SERVER_USER=${EMAILOGIN}
-      - WATCHTOWER_NOTIFICATION_EMAIL_SERVER_PASSWORD=${APPPASSWORD}
-      - WATCHTOWER_NOTIFICATION_EMAIL_DELAY=2
+#      - WATCHTOWER_NOTIFICATION_GOTIFY_TOKEN=${token}
+#      - WATCHTOWER_NOTIFICATION_GOTIFY_URL=${url}
+
+#      - WATCHTOWER_NOTIFICATIONS=email
+#      - WATCHTOWER_NOTIFICATION_EMAIL_FROM=${EMAILURLFROM}
+#      - WATCHTOWER_NOTIFICATION_EMAIL_TO=${EMAILURLTO}
+#      - WATCHTOWER_NOTIFICATION_EMAIL_SERVER=${SMTPSERVER}
+#      - WATCHTOWER_NOTIFICATION_EMAIL_SERVER_PORT=${EMAILPORT}
+#      - WATCHTOWER_NOTIFICATION_EMAIL_SERVER_USER=${EMAILOGIN}
+#      - WATCHTOWER_NOTIFICATION_EMAIL_SERVER_PASSWORD=${APPPASSWORD}
+#      - WATCHTOWER_NOTIFICATION_EMAIL_DELAY=2
+
+      - WATCHTOWER_NOTIFICATIONS=slack
+      - WATCHTOWER_NOTIFICATION_SLACK_HOOK_URL=${URL_SLACK}
+      - WATCHTOWER_NOTIFICATION_SLACK_IDENTIFIER=${SLACK_MAJ_CONTAINERS_IDENTIFIER}
+#      - WATCHTOWER_NOTIFICATION_SLACK_CHANNEL=${SLACK_CHANNEL_MAJ_CONTAINERS}
     networks:
       - net
     volumes:
