--- a/wordpress-vps.env
+++ b/wordpress-vps.env
@@ -1,3 +1,7 @@
 WORDPRESS_DB_HOST=db:3306
 WORDPRESS_DB_USER=admin-marcos
 WORDPRESS_DB_PASSWORD=jd^3Qi^RX6XqfGpRxdni
+MYSQL_ROOT_PASSWORD=jd^3Qi^RX6XqfGpRxdni
+MYSQL_DATABASE=wordpress
+MYSQL_USER=admin-marcos
+MYSQL_PASSWORD=jd^3Qi^RX6XqfGpRxdni
