--- a/wordpress-vps.yml
+++ b/wordpress-vps.yml
@@ -25,7 +25,7 @@ services:
       - "org.label-schema.group=app-vps"
 
   db:
-    image: mysql:5.7
+    image: mysql:latest
     container_name: wordpress-db-vps
     restart: unless-stopped
     environment:
@@ -38,7 +38,7 @@ services:
     networks:
       - net
     labels:
-      - "com.centurylinklabs.watchtower.enable=true"
+      - "com.centurylinklabs.watchtower.enable=false"
       - "org.label-schema.group=app-vps"
 
   pma:
