--- a/app-admin.yml
+++ b/app-admin.yml
@@ -24,6 +24,24 @@ services:
       - "com.centurylinklabs.watchtower.enable=true"
       - "org.label-schema.group=app-admin"
 
+  nginx-proxy-manager:
+    image: jc21/nginx-proxy-manager:latest
+    container_name: nginx-proxy-manager
+    restart: unless-stopped
+    volumes:
+      - "/docker/nginx-proxy-manager:/data/"
+      - "/docker/nginx-proxy-manager:/letsencrypt/"
+      - "/docker/nginx-proxy-manager:/etc/letsencrypt/"
+    ports:
+      - 80:80
+      - 443:443
+      - 81:81
+    networks:
+      - net
+    labels:
+      - "com.centurylinklabs.watchtower.monitor-only=true"
+      - "org.label-schema.group=app-admin"
+
   vaultwarden:
     container_name: vaultwarden
     image: vaultwarden/server:latest
