--- a/app-media.yml
+++ b/app-media.yml
@@ -17,7 +17,7 @@ services:
     environment:
       - ND_SCANSCHEDULE=24h
     volumes:
-      - "/srv/dev-disk-by-uuid-4eabc91d-46b4-4d1d-9b18-5c13f7f80153/docker/navidrome/data:/data"
+      - "/docker/navidrome/data:/data"
 #      - "/srv/dev-disk-by-uuid-4eabc91d-46b4-4d1d-9b18-5c13f7f80153/musiques/musics:/music/ro"
       - "/srv/dev-disk-by-uuid-4eabc91d-46b4-4d1d-9b18-5c13f7f80153/musiques/musics:/music"
     labels:
