--- a/app-media.yml
+++ b/app-media.yml
@@ -18,8 +18,7 @@ services:
       - ND_SCANSCHEDULE=24h
     volumes:
       - "/docker/navidrome/data:/data"
-#      - "/srv/dev-disk-by-uuid-4eabc91d-46b4-4d1d-9b18-5c13f7f80153/musiques/musics:/music/ro"
-      - "/ZFS/musics/musics:/music"
+      - "/ZFS/music/musics:/music"
     labels:
       - "com.centurylinklabs.watchtower.enable=true"
       - "org.label-schema.group=app-media"
