--- a/app-media.yml
+++ b/app-media.yml
@@ -18,7 +18,7 @@ services:
       - ND_SCANSCHEDULE=24h
     volumes:
       - "/docker/navidrome/data:/data"
-      - "/ZFS/music/musics:/music"
+      - "/ZFS/musique/navidrome:/music"
     labels:
       - "com.centurylinklabs.watchtower.enable=true"
       - "org.label-schema.group=app-media"
