--- a/app-vps.yml
+++ b/app-vps.yml
@@ -32,18 +32,18 @@ services:
       - WATCHTOWER_LOG_LEVEL=info
       - WATCHTOWER_LABEL_ENABLE=true
 
-#      - WATCHTOWER_NOTIFICATIONS=email
-#      - WATCHTOWER_NOTIFICATION_EMAIL_FROM=${EMAILURLFROM}
-#      - WATCHTOWER_NOTIFICATION_EMAIL_TO=${EMAILURLTO}
-#      - WATCHTOWER_NOTIFICATION_EMAIL_SERVER=${SMTPSERVER}
-#      - WATCHTOWER_NOTIFICATION_EMAIL_SERVER_PORT=${EMAILPORT}
-#      - WATCHTOWER_NOTIFICATION_EMAIL_SERVER_USER=${EMAILOGIN}
-#      - WATCHTOWER_NOTIFICATION_EMAIL_SERVER_PASSWORD=${APPPASSWORD}
-#      - WATCHTOWER_NOTIFICATION_EMAIL_DELAY=2
+      - WATCHTOWER_NOTIFICATIONS=email
+      - WATCHTOWER_NOTIFICATION_EMAIL_FROM=${EMAILURLFROM}
+      - WATCHTOWER_NOTIFICATION_EMAIL_TO=${EMAILURLTO}
+      - WATCHTOWER_NOTIFICATION_EMAIL_SERVER=${SMTPSERVER}
+      - WATCHTOWER_NOTIFICATION_EMAIL_SERVER_PORT=${EMAILPORT}
+      - WATCHTOWER_NOTIFICATION_EMAIL_SERVER_USER=${EMAILOGIN}
+      - WATCHTOWER_NOTIFICATION_EMAIL_SERVER_PASSWORD=${APPPASSWORD}
+      - WATCHTOWER_NOTIFICATION_EMAIL_DELAY=2
 
-      - WATCHTOWER_NOTIFICATIONS=slack
-      - WATCHTOWER_NOTIFICATION_SLACK_HOOK_URL=${URL_SLACK}
-      - WATCHTOWER_NOTIFICATION_SLACK_IDENTIFIER=${SLACK_MAJ_CONTAINERS_IDENTIFIER}
+#      - WATCHTOWER_NOTIFICATIONS=slack
+#      - WATCHTOWER_NOTIFICATION_SLACK_HOOK_URL=${URL_SLACK}
+#      - WATCHTOWER_NOTIFICATION_SLACK_IDENTIFIER=${SLACK_MAJ_CONTAINERS_IDENTIFIER}
 #      - WATCHTOWER_NOTIFICATION_SLACK_CHANNEL=${SLACK_CHANNEL_MAJ_CONTAINERS}
     networks:
       - net
