--- a/proxy-nas.yml
+++ b/proxy-nas.yml
@@ -4,6 +4,8 @@ networks:
   net:
     driver: bridge
 
+services:
+
   nginx-proxy-manager:
     image: jc21/nginx-proxy-manager:latest
     container_name: nginx-proxy-manager
