--- a/app-nas.env
+++ b/app-nas.env
@@ -4,3 +4,5 @@ SMTPSERVER=smtp.gmail.com
 EMAILPORT=587
 EMAILOGIN=naspariteau@gmail.com
 APPPASSWORD=musfgqatifhmhbuz
+USER_TRANSMISSION=transmission
+PWD_TRANSMISSION=bEmpF12I2VAiacXI
