--- a/proxy-nas.yml
+++ b/proxy-nas.yml
@@ -21,5 +21,5 @@ services:
     networks:
       - net
     labels:
-      - "com.centurylinklabs.watchtower.monitor-only=true"
+      - "com.centurylinklabs.watchtower.enable=true"
       - "org.label-schema.group=app-admin"
