--- a/proxy-nas.yml
+++ b/proxy-nas.yml
@@ -8,7 +8,7 @@ services:
 
   nginx-proxy-manager:
     image: jc21/nginx-proxy-manager:latest
-    container_name: nginx-proxy-manager
+    container_name: proxy-nas
     restart: unless-stopped
     volumes:
       - "/docker/nginx-proxy-manager:/data/"
