--- a/app-nas.yml
+++ b/app-nas.yml
@@ -40,6 +40,8 @@ services:
       - 9091:9091
       - 51413:51413
       - 51413:51413/udp
+    networks:
+      - net
     restart: unless-stopped
     labels:
       - "com.centurylinklabs.watchtower.enable=true"
